--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,7 +100,8 @@
 .login-form {
   width: 360px;
   background: #f1f1f1;
-  height: 400px;
+  margin-top: 100px;
+  height: 200px;
   padding: 30px 15px;
   border-radius: 10px;
   position: absolute;
@@ -112,6 +113,8 @@
   width: 560px;
   background: #f1f1f1;
   height: 400px;
+  font-size: 20px;
+  line-height: 20px;
   padding: 30px 15px;
   border-radius: 10px;
   position: absolute;
