Renaming the title

--- a/templates/index.html
+++ b/templates/index.html
@@ -157,7 +157,7 @@
         options: {
           title: {
             display: true,
-            text: "Largest Cities In Massachusetts",
+            text: "Six Week Sales Prediction of Pharmaceutical stores",
             fontSize: 12,
           },
           legend: {
