Date picker resolved to allow selection from 2015

--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,14 @@
         <div class="txtb tooltip">
           <h3>Select Date to see the Sales prediction on that date</h3>
 
-          <input type="date" id="pred_date" name="pred_date" required />
+          <input
+            type="date"
+            id="pred_date"
+            name="pred_date"
+            required
+            min="2015-08-01"
+            max="2015-09-18"
+          />
           <span class="tooltiptext"
             >Select date from 2015-08-01 to 2015-09-17</span
           >
